feat: exchange docs
