# docs/swagger.yaml
@@ -132,6 +132,17 @@ definitions:
       time:
         type: integer
     type: object
+  models.Exchanges:
+    properties:
+      id:
+        type: string
+      image_src:
+        type: string
+      name:
+        type: string
+      short:
+        type: string
+    type: object
   models.Key:
     properties:
       api_key:
@@ -279,6 +290,36 @@ info:
   title: BidBox Exchanges Service API
   version: "1.0"
 paths:
+  /:
+    post:
+      consumes:
+      - application/json
+      description: Add New Exchange
+      parameters:
+      - description: add exchange
+        in: body
+        name: exchange
+        required: true
+        schema:
+          $ref: '#/definitions/models.Exchanges'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Exchanges'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Add New Exchange
+      tags:
+      - exchanges
   /binance/account:
     get:
       consumes:
@@ -673,4 +714,25 @@ paths:
       summary: Get Key By Id
       tags:
       - keys
+  /supported:
+    get:
+      consumes:
+      - application/json
+      description: Get Supported Exchanges
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Exchanges'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get Supported Exchanges
+      tags:
+      - exchanges
 swagger: "2.0"
