# internal/api/exchange_controller.go
@@ -10,6 +10,17 @@ import (
 	"github.com/kryptomind/bidboxapi/KeyService/response"
 )
 
+// Add New Exchange godoc
+// @Summary      Add New Exchange
+// @Description   Add New Exchange
+// @Tags         exchanges
+// @Accept       json
+// @Produce      json
+// @Param        exchange body  models.Exchanges true  "add exchange"
+// @Success      200  {object} models.Exchanges
+// @Failure      422  {string}  KeyResp
+// @Failure      500  {string}  KeyResp
+// @Router       / [post]
 func (server *Server) CreateExchanges(w http.ResponseWriter, r *http.Request) {
 
 	body, err := ioutil.ReadAll(r.Body)
@@ -38,6 +49,15 @@ func (server *Server) CreateExchanges(w http.ResponseWriter, r *http.Request) {
 	response.JSON(w, http.StatusCreated, KeyCreated)
 }
 
+// Get Supported Exchanges godoc
+// @Summary      Get Supported Exchanges
+// @Description  Get Supported Exchanges
+// @Tags         exchanges
+// @Accept       json
+// @Produce      json
+// @Success      200  {object} []models.Exchanges
+// @Failure      500  {string}  KeyResp
+// @Router       /supported [get]
 func (server *Server) GetExchanges(w http.ResponseWriter, r *http.Request) {
 
 	Exchange := models.Exchanges{}
